--- a/src/styles/item.less
+++ b/src/styles/item.less
@@ -423,6 +423,9 @@ main{
                     text-align: center; 
                     width: 550px;
                     bottom: 50px;
+                .active{
+                    background-color: black;
+                }
                     span{
                         cursor: pointer;
                         display: inline-block;
@@ -431,7 +434,6 @@ main{
                         border-radius: 0;
                         border: 0;
                         height: 3px;
-
                     }
 
                 }
