--- a/src/styles/item.less
+++ b/src/styles/item.less
@@ -539,6 +539,16 @@ main{
                         display: flex;
                         justify-content: space-between;
                     }
+
+                    .bottom{
+                        margin-top: 20px;
+                        padding-top: 20px;
+                        span{
+                            color: #ff6700;
+                            font-size: 24px;
+                            
+                        }
+                    }
                     
                 }
                 .buttom{
