--- a/src/styles/shop.less
+++ b/src/styles/shop.less
@@ -35,6 +35,32 @@ main{
     background: #f5f5f5;
     overflow: hidden;
     padding: 38px 0;
+
+        ul {
+            list-style: none;
+            overflow: hidden;
+            width: 90%;
+            margin: 0 auto;
+            margin-bottom: 100px;
+        }.item {
+            border: 1px solid black;
+            margin: 5px;
+            padding: 5px;
+            overflow: hidden;
+            img{
+                width: 100px;
+                height: 100px;
+            }
+            >div {
+                float: left;
+                line-height: 112px;
+                margin: 0 5px;
+            }
+        }
+
+    
+
+    
     >.box1{
         >.wrapper{
             padding-left: 300px;
